project_4/cilium/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-demo
  labels:
    name: cilium-demo
    environment: production
