project_4/cilium/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: cilium-demo
  labels:
    app: backend
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: backend
    tier: backend
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
