project_4/cilium/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: cilium-demo
  labels:
    app: database
    tier: database
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: database
    tier: database
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis
