project_4/cilium/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cilium-demo
  labels:
    app: frontend
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
    tier: frontend
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
