project_4/cilium/00-default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-all
  namespace: cilium-demo
spec:
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
