project_4/cilium/allow-ccoredns-api-server.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-dns-to-apiserver
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
  egress:
  - toEntities:
    - kube-apiserver
  - toEndpoints:
    - {}
