project_4/cilium/allow-hubble-relay.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubble-relay
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: hubble-relay
  egress:
  - toEndpoints:
    - {}
  - toEntities:
    - all
